HADOOP-16073: Use JDK1.7 StandardCharsets